--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.0
+  carousel_slider: any
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -44,10 +46,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/data/states.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
